--- a/window-washing-job/html/index.html
+++ b/window-washing-job/html/index.html
@@ -14,6 +14,7 @@
             <div class="job-header">
                 <i class="fas fa-spray-can"></i>
                 <h2>Window Washing</h2>
+                <button id="quit-job"><i class="fas fa-sign-out-alt"></i></button>
                 <button id="close-ui"><i class="fas fa-times"></i></button>
             </div>
             <div class="job-content">
